# ForensIQ-Project

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  README.md  SECURITY.md  SPEC.md  USER_MANUAL.md  WORK_DIVISION.md  cli_investigator.py  cli_investigator.spec  cliff.toml  complex_witness_statement.txt  constitution.md  mock_witness_statement.txt  mock_witness_statement_forensiq_report.json  render.yaml  test_tunnel.py
.specify/: agents.md  constitution.md  setup  skills.md
.specify/agents/: constitutions.md
.specify/skills/: SKILL.md
.specify/templates/: tasks-template.md
Templates/: README.md
backend/: .coverage  main.py  pyproject.toml  requirements.txt  test_llm.py
backend/api/: router.py
backend/database/: database.py  models.py
backend/processors/: audio.py  image.py  pdf.py
backend/services/: llm.py
backend/tests/: test_main.py
backend/uploads/: case_001_witness_statement.txt  case_002_witness_statement.txt  case_003_missing_person.txt  case_004_kidnapping.txt  massive_syndicate_case.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/dev-dist/: sw.js
frontend/src/: App.jsx  index.css
specs/: 001_offline_intelligence.md  data-model.md  plan.md  research.md  spec.md
specs/forensiq/: plan.md  spec.md  tasks.md
