[project]
name = "forensiq-backend"
version = "0.1.0"
description = "Offline Investigation Intelligence API"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-multipart",
    "requests"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=./ --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]

[tool.coverage.run]
omit = ["test_llm.py", "processors/*"]
